# SFMLPong

./: CMakeLists.txt  README.md  README.txt  main.cpp
builds/Linux64/: Pong
builds/Linux64/libs/SFML/lib/: libsfml-audio.so.3.0.0  libsfml-graphics.so.3.0.0  libsfml-network.so.3.0.0  libsfml-system.so.3.0.0  libsfml-window.so.3.0.0
src/application/: Application.cpp  Application.hpp
src/components/: IComponent.hpp  RectangleComponent.cpp  RectangleComponent.hpp  RenderComponent.cpp  RenderComponent.hpp  SoundComponent.cpp  SoundComponent.hpp  TextComponent.cpp  TextComponent.hpp
src/gameobject/: Ball.cpp  Ball.hpp  Border.cpp  Border.hpp  Enemy.cpp  Enemy.hpp  GameObject.cpp  GameObject.hpp  Paddle.cpp  Paddle.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  Score.cpp  Score.hpp  ScoreObserver.cpp  ScoreObserver.hpp
src/window/: Window.cpp  Window.hpp
